@@ -1,3 +1,13 @@
+Version 3:
+- make pumpkins with face not craftable but created by punching with a sword
+- change groups of pumpkins to more wood like
+- add big pumpkin
+- add scarecrow
+- make bread non stackable
+- make saplings plantable everywhere (they still grow only with light and wet soil)
+- add weed
+- add fuel attributes to nearly everything
+- add pumpkin bread
 Version 2:
 - soil dont turn to dirt when walking over it
 - fix hoe bug
